--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "watch-tsc": "vue-tsc --watch --noEmit"
   },
   "dependencies": {
+    "axios": "^1.3.6",
     "url": "^0.11.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
