--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "pinia": "^2.0.35",
     "url": "^0.11.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6"
