--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "axios": "^1.3.6",
+    "http-proxy-middleware": "^2.0.6",
+    "https": "^1.0.0",
     "pinia": "^2.0.35",
     "url": "^0.11.0",
     "vue": "^3.2.47",
