--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@vitejs/plugin-vue": "^4.1.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
+    "vite-svg-loader": "^4.0.0",
     "vue-tsc": "^1.2.0"
   }
 }
