--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite",
     "build": "vue-tsc && vite build",
     "preview": "vite preview",
-    "watch-tsc": "vue-tsc --watch --noEmit"
+    "watch-tsc": "vue-tsc --watch --noEmit",
+    "deploy": "gh-pages -d dist",
+    "serve-dist": "serve -s dist"
   },
   "dependencies": {
     "axios": "^1.3.6",
@@ -20,6 +22,7 @@
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.1.0",
+    "gh-pages": "^5.0.0",
     "typescript": "^5.0.2",
     "vite": "^4.3.0",
     "vite-svg-loader": "^4.0.0",
